# chatgpt

./: README.md  pyproject.toml
chatgpt/: chat.py  main.py  transcript.py
dialoggpt/: chat.py  speaker.py  transcript.py
dialoggpt/openai/: __init__.py  chat.py
