[tool.poetry]
name = "dialoggpt"
version = "0.1.0"
description = ""
authors = ["Masashi SAKAI <masashi.sakai1986@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.7"
google-cloud-speech = "^2.20.0"
google-cloud-texttospeech = "^2.14.1"
simpleaudio = "^1.0.4"
pydub = "^0.25.1"
PyAudio = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
